add default bg and text colout to body

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,12 @@
     </head>
     <body>
         <h1>Home page</h1>
+        <p>Hi I'm Stephen. I'm do code good.</p>
+        <div>
+            <nav>
+                <a href="/projects">Projects</a>
+                <a href="/about">About</a>
+            </nav>
+        </div>
     </body>
 </html>
