add navbar to pages

--- a/src/about.html
+++ b/src/about.html
@@ -8,6 +8,15 @@
         <title>About Me | Stephen Brady</title>
     </head>
     <body>
+        <header class="page-header">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="/home" class="nav-link">Home</a></li>
+                    <li><a href="/projects" class="nav-link">Projects</a></li>
+                    <li><a href="/about" class="nav-link current">About</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>About Me</h1>
     </body>
 </html>
