--- a/src/projects.html
+++ b/src/projects.html
@@ -8,6 +8,15 @@
         <title>Projects | Stephen Brady</title>
     </head>
     <body>
+        <header class="page-header">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="/home" class="nav-link">Home</a></li>
+                    <li><a href="/projects" class="nav-link current">Projects</a></li>
+                    <li><a href="/about" class="nav-link">About</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Projects Page</h1>
         <section class="project-cards">
             <article class="card">
