--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,16 @@
         <title>Stephen Brady | Software Developer</title>
     </head>
     <body>
+        <header class="page-header">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="/home" class="nav-link current">Home</a></li>
+                    <li><a href="/projects" class="nav-link">Projects</a></li>
+                    <li><a href="/about" class="nav-link">About</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1>Home page</h1>
         <p>Hi I'm Stephen. I'm do code good.</p>
-        <div>
-            <nav>
-                <a href="/projects">Projects</a>
-                <a href="/about">About</a>
-            </nav>
-        </div>
     </body>
 </html>
