add main-container class to center all content

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
                 </ul>
             </nav>
         </header>
-        <h1>Home page</h1>
-        <p>Hi I'm Stephen. I'm do code good.</p>
+        <main class="main-container">
+
+            <h1>Home page</h1>
+            <p>Hi I'm Stephen. I'm do code good.</p>
+        </main>
     </body>
 </html>
