--- a/src/projects.html
+++ b/src/projects.html
@@ -17,6 +17,8 @@
                 </ul>
             </nav>
         </header>
+        <main class="main-container">
+
         <h1>Projects Page</h1>
         <section class="project-cards">
             <article class="card">
@@ -335,5 +337,6 @@
                 </div>
             </article>
         </section>
+        </main>
     </body>
 </html>
