--- a/src/about.html
+++ b/src/about.html
@@ -17,6 +17,8 @@
                 </ul>
             </nav>
         </header>
-        <h1>About Me</h1>
+        <main class="main-container">
+            <h1>About Me</h1>
+        </main>
     </body>
 </html>
