--- a/src/about.html
+++ b/src/about.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="/home" class="nav-link">Home</a></li>
                     <li><a href="/projects" class="nav-link">Projects</a></li>
-                    <li><a href="/about" class="nav-link current">About</a></li>
+                    <li><a href="/about" class="nav-link current">About<span class="navbar-underline"></span></a></li>
                 </ul>
             </nav>
         </header>
