--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
         <header class="page-header">
             <nav class="navbar">
                 <ul>
-                    <li><a href="/home" class="nav-link current">Home</a></li>
+                    <li><a href="/home" class="nav-link current">Home<span class="navbar-underline"></span></a></li>
                     <li><a href="/projects" class="nav-link">Projects</a></li>
                     <li><a href="/about" class="nav-link">About</a></li>
                 </ul>
             </nav>
         </header>
         <main class="main-container">
-
             <h1>Home page</h1>
             <p>Hi I'm Stephen. I'm do code good.</p>
         </main>
